# SICdb_MEDS

./: .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: python-build.yaml
src/ETL_MEDS/: __init__.py  __main__.py  commands.py  dataset.yaml  download.py  pre_MEDS.py
src/ETL_MEDS/configs/: main.yaml
src/SICdb_MEDS/: __init__.py  __main__.py  commands.py  dataset.yaml  download.py  pre_MEDS.py  waveform_utils.py
src/SICdb_MEDS/configs/: ETL.yaml  event_configs.yaml  main.yaml  table_preprocessors.yaml
tests/: e2e_demo_test.py
